--- a/Index.html
+++ b/Index.html
@@ -148,6 +148,50 @@
         .seccion.active {
             display: block;
         }
+
+        /* Contenedor de proyectos */
+        .contenedor-proyectos {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        /* Cuadro de proyecto */
+        .cuadro-proyecto {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .cuadro-proyecto:hover {
+            transform: translateY(-10px);
+        }
+
+        /* Imagen del proyecto */
+        .cuadro-proyecto img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        /* Título y texto */
+        .cuadro-proyecto h2 {
+            margin-top: 15px;
+            color: #333;
+            font-size: 22px;
+        }
+
+        .cuadro-proyecto p {
+            color: #555;
+            font-size: 16px;
+            line-height: 1.5;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
@@ -183,13 +227,44 @@
         <!-- Sección Acerca -->
         <div id="acerca" class="seccion active">
             <h1>Acerca de mí</h1>
+            <!--
             <p>Mi trayectoria académica incluye un <span class="resaltado">Máster en Diseño y Programación Web</span> por la Universidad Americana de Europa (UNADE), donde adquirí habilidades en <span class="resaltado">HTML5, CSS3, JavaScript, PHP, frameworks y MySQL</span>. Actualmente, amplío mis conocimientos en desarrollo de software, enfocándome en <span class="resaltado">tecnologías emergentes</span> y optimización de procesos.</p>
+            -->
+            <h2>skills</h2>
+            <img src="imagenes/html5.png" alt="html">
+            <img src="imagenes/css3.png" alt="css3">
+            <img src="imagenes/javascript.png" alt="javas">
+            <img src="imagenes/bootstrap.png" alt="b">
+            <img src="imagenes/mysql.png" alt="mysql">
+            <img src="imagenes/c.png" alt="c"> 
+            <img src="imagenes/php.png" alt="php">
+            <img src="imagenes/TiaPortal.jpeg" alt="tp">
+            <img src="imagenes/AutoCAD.png" alt="ac">
+            <img src="imagenes/AWLFUPKOP.jpeg" alt=""> 
         </div>
 
         <!-- Sección Proyectos -->
         <div id="proyectos" class="seccion">
             <h1>Mis Proyectos</h1>
             <p>Aquí encontrarás algunos de mis proyectos en desarrollo web y videojuegos.</p>
+            
+            <!-- Contenedor de proyectos -->
+            <div class="contenedor-proyectos">
+                <!-- Cuadro de proyecto -->
+                <div class="cuadro-proyecto">
+                    <img src="imagenes/proyecto1.png" alt="Proyecto 1">
+                    <h2>Proyecto 1</h2>
+                    <p>Este es un proyecto de desarrollo web donde implementé un listado de IAs disponibles y gestion de nuevos usuarios con base de datos</p>
+                </div>
+
+                <div class="cuadro-proyecto">
+                    <img src="imagenes/proyecto2.png" alt="Proyecto 2">
+                    <h2>Proyecto 2</h2>
+                    <p>Un videojuego que recrea un juego de mesa en 3D inventado por mi e inspirado en el catan usando Unity </p>
+                </div>
+
+                <!-- Puedes añadir más cuadros de proyecto aquí -->
+            </div>
         </div>
 
         <!-- Sección Contacto -->
