--- a/Index.html
+++ b/Index.html
@@ -226,10 +226,11 @@
     <div class="contenido">
         <!-- Sección Acerca -->
         <div id="acerca" class="seccion active">
-            <h1>Acerca de mí</h1>
-            <!--
-            <p>Mi trayectoria académica incluye un <span class="resaltado">Máster en Diseño y Programación Web</span> por la Universidad Americana de Europa (UNADE), donde adquirí habilidades en <span class="resaltado">HTML5, CSS3, JavaScript, PHP, frameworks y MySQL</span>. Actualmente, amplío mis conocimientos en desarrollo de software, enfocándome en <span class="resaltado">tecnologías emergentes</span> y optimización de procesos.</p>
-            -->
+            <h1>Acerca de mí</h1>            
+            <p>Acerca de mis estudios tengo un grado superior en Robótica y Automatización Industrial donde empecé a programar con C++,KOP,AWL y aprendí a diseñar planos en AutoCAD. Recientemente me saque un Máster en Diseño y Programación Web por la Universidad Americana de Europa (UNADE), donde adquirí habilidades en HTML5, CSS3, JavaScript, PHP, frameworks y bases de datos MySQL.</p>
+            <img src="imagenes/Unade.png" alt="Unade">
+            <img src="imagenes/xaloc.png" alt="xaloc">
+            
             <h2>skills</h2>
             <img src="imagenes/html5.png" alt="html">
             <img src="imagenes/css3.png" alt="css3">
