--- a/Index.html
+++ b/Index.html
@@ -270,7 +270,7 @@
         <!-- Sección Acerca -->
         <div id="acerca" class="seccion active">
             <h1>Acerca de mi</h1>
-            <p>Acerca de mis estudios tengo un grado superior en Robótica y Automatización Industrial donde empecé a programar con C++,KOP,AWL y aprendí a diseñar planos en AutoCAD. Recientemente me saque un Máster en Diseño y Programación Web por la Universidad Americana de Europa (UNADE), donde adquirí habilidades en HTML5, CSS3, JavaScript, PHP, frameworks y bases de datos MySQL.</p>
+            <p>Tengo dos Grados superiores, uno en Robótica y Automatización Industrial y otro en Mecatrónica. En ambos aprendí a programar con C++,KOP,AWL y a diseñar planos en AutoCAD. Recientemente, finalicé con matrícula el Máster en Diseño y Programación Web por la Universidad Americana de Europa (UNADE), donde adquirí habilidades en HTML5, CSS3, JavaScript, PHP, frameworks y bases de datos MySQL.</p>
             <!-- Aplicamos las clases de las imágenes -->
             <img src="imagenes/Unade.png" alt="Unade" class="empresa-img">
             <img src="imagenes/xaloc.png" alt="xaloc" class="empresa-img">
