--- a/Index.html
+++ b/Index.html
@@ -292,7 +292,11 @@
         <!-- Sección Acerca -->
         <div id="acerca" class="seccion active">
             <h1>Acerca de mi</h1>
-            <p>Tengo dos Grados superiores, uno en Robótica y Automatización Industrial y otro en Mecatrónica. En ambos aprendí a programar con C++,KOP,AWL y a diseñar planos en AutoCAD. Recientemente, finalicé con matrícula el Máster en Diseño y Programación Web por la Universidad Americana de Europa (UNADE), donde adquirí habilidades en HTML5, CSS3, JavaScript, PHP, frameworks y bases de datos MySQL.</p>
+            <p>
+                Apasionado de la programación aplicada a webs y videojuegos, me formé en ello con matrícula (Máster y FP específica) y actualmente estoy cursando DAM para ampliar conocimientos. Tengo experiencia sólida en múltiples lenguajes de programación y programas (orientado a objetos como Phyton y C++, base de datos como SQL,  y webs como HTML5 y CSS3).
+
+Tengo un Grado Superior en Mecatrónica Industrial y también en Automatización y Robótica Industrial, lo que me da una visión única sobre programación y sus lenguajes (KOP, AWL, TIA portal Siemens, AutoCAD, SCADA, FluidSIM, SolidWorks). Experiencia corporativa como Técnico Programador de PLC y HMI, y de Mecánico Mantenimiento.
+            </p>
             <!-- Aplicamos las clases de las imágenes -->
             <img src="imagenes/Unade.png" alt="Unade" class="empresa-img">
             <img src="imagenes/xaloc.png" alt="xaloc" class="empresa-img">
