--- a/Index.html
+++ b/Index.html
@@ -282,7 +282,7 @@
             </a>
         </div>
                 <!-- Botón para descargar y ver el CV -->
-        <a href="CV Pau Sangenis_Programacion.pdf" target="_blank" download="PauSangenisMalo_CV.pdf">
+        <a href="CV Pau Sangenis_2026.pdf" target="_blank" download="PauSangenisMalo_CV.pdf">
             <button class="cv-btn">CV</button>
         </a>
     </nav>
